crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__string_contains@nulls_starts_with_b.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: String(
        StringFilter {
            operator: StartsWith,
            query: "b",
        },
    ),
    field: Field {
        name: "column",
        data_type: Utf8,
        nullable: true,
    },
    unfiltered: StringArray
    [
      "a",
      "b",
      null,
      "ab",
      "A B",
      "aBc",
    ],
    filtered: StringArray
    [
      "b",
    ],
}
