crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__string_contains_list@c.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    op: StringContains(
        "c",
    ),
    field: Field {
        name: "column",
        data_type: List(
            Field {
                name: "item",
                data_type: Utf8,
                nullable: false,
                dict_id: 0,
                dict_is_ordered: false,
                metadata: {},
            },
        ),
        nullable: false,
        dict_id: 0,
        dict_is_ordered: false,
        metadata: {},
    },
    unfiltered: ListArray
    [
      StringArray
    [
      "a",
      "b",
    ],
      StringArray
    [
      "c",
      "ab",
    ],
      StringArray
    [
      "A B",
      "aBc",
    ],
    ],
    filtered: ListArray
    [
      StringArray
    [
      "c",
      "ab",
    ],
      StringArray
    [
      "A B",
      "aBc",
    ],
    ],
}
