crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__string_contains_list@inner_null_ab.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    op: String(
        StringFilter {
            operator: Contains,
            query: "ab",
        },
    ),
    field: Field {
        name: "column",
        data_type: List(
            Field {
                name: "item",
                data_type: Utf8,
                nullable: true,
                dict_id: 0,
                dict_is_ordered: false,
                metadata: {},
            },
        ),
        nullable: false,
        dict_id: 0,
        dict_is_ordered: false,
        metadata: {},
    },
    unfiltered: ListArray
    [
      StringArray
    [
      "a",
      "b",
    ],
      StringArray
    [
      null,
      "ab",
    ],
      StringArray
    [
      null,
      "aBc",
    ],
    ],
    filtered: ListArray
    [
      StringArray
    [
      null,
      "ab",
    ],
      StringArray
    [
      null,
      "aBc",
    ],
    ],
}
