crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__string_contains_list@inner_outer_nullable_c.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: "(filter, result)"
---
(
    Filter {
        column_name: "string_list",
        operation: StringContains(
            "c",
        ),
    },
    RecordBatch {
        schema: Schema {
            fields: [
                Field {
                    name: "string_list",
                    data_type: List(
                        Field {
                            name: "item",
                            data_type: Utf8,
                            nullable: true,
                            dict_id: 0,
                            dict_is_ordered: false,
                            metadata: {},
                        },
                    ),
                    nullable: true,
                    dict_id: 0,
                    dict_is_ordered: false,
                    metadata: {},
                },
            ],
            metadata: {},
        },
        columns: [
            ListArray
            [
              StringArray
            [
              "c",
              "ab",
            ],
              StringArray
            [
              "A B",
              "aBc",
            ],
            ],
        ],
        row_count: 2,
    },
)
